- Added local and remote data source base classes - Added local database framework - Implemented album repository to cache network responses and fetch from cache if available - Added dependency injection - Added minor UI changes

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,3 +1,12 @@
 {
-  "albumListTitle": "Album Gallery"
+  "albumListTitle": "Album Gallery",
+  "albumTitle": "Album {albumId}",
+  "@albumTitle": {
+    "placeholders": {
+      "albumId": {
+        "type": "String",
+        "example": "1"
+      }
+    }
+  }
 }
