- Added exception handling for album network calls - Added placeholder loader for photo widgets

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,5 +8,9 @@
         "example": "1"
       }
     }
-  }
+  },
+  "noInternetConnectionError": "No internet connection detected, please connect to the internet and try again",
+  "requestTimedOutError": "Request timed out, please try again later",
+  "unknownError": "Something went wrong, please try again later",
+  "retry": "Retry"
 }
